Fix overflow style in article, article paragraph and code fields

--- a/css/components/code.css
+++ b/css/components/code.css
@@ -1,5 +1,6 @@
 .article__code {
   display: block;
+  overflow-x: scroll;
   padding: 20px;
   background-color: var(--background-color--primary);
 }
